# chessy

./: README.md  \  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  rust_opening_book.rs
data/: game.json  info.txt
lib/: constants.ts  dictionaryFunctions.ts  makeBotMove.ts  positionFunctions.ts  worker.ts
pages/: _app.tsx  _document.tsx  index.tsx
pages/api/: hello.ts
src-tauri/: C:\Users\User\Documents\chessy\data\game.json  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs  mut_static.rs  node.rs  node_macros.rs  opening_book.rs  utils.rs
styles/: globals.css
