[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
tokio = { version = "1.34.0", features = ["full"] }
lazy_static = "1.4.0"
shakmaty = "0.26.0"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
